--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -61,6 +61,10 @@ h1 {
   margin-left: 30px;
 }
 
+.actions {
+  display: flex;
+}
+
 button {
   color: #CCC;
   text-decoration: none;
@@ -74,6 +78,7 @@ button {
   transition: 100ms linear border-color;
   background: none;
   cursor: pointer;
+  margin-right: 20px;
 }
 
 button:hover {
